Fix too large margin in new posts

--- a/css/style.css
+++ b/css/style.css
@@ -348,6 +348,7 @@ img.index-page {
 
 .col {
   padding-bottom: 30px;
+  margin-top: 0;
 }
 
 .col-sm-4 {
